created Spikedev Gradle plugin